examples/negative/oneshot/resume_twice.kai
# Negative fixture (#511 / one-shot resume): docs/effects-impl.md
# says continuations are one-shot. Resuming a continuation twice
# is a contract violation. Per the design, this is enforced at
# RUNTIME (compile time can't always prove single-resume), so the
# acceptance criterion is: the binary aborts with the documented
# `continuation resumed twice` panic message.

effect Io { print_io(s: String) : Unit }

fn main() : Int {
  handle {
    Io.print_io("a")
    0
  } with Io {
    print_io(s, resume) -> {
      let _ = resume(())
      resume(())
    }
    return(x) -> x
  }
}
